--- a/views/index.erb
+++ b/views/index.erb
@@ -5,7 +5,14 @@
 </head>
 <body>
 	<p>
+		<%=message%>
+	</p>
+	<p>
 		The SECRET NUMBER is <%=secret_number%>
 	</p>
+	<form>
+		<input type="text" name="guess" />
+		<input type="submit" value="Guess!" />
+	</form>
 </body>
 </html>
