--- a/views/index.erb
+++ b/views/index.erb
@@ -2,6 +2,11 @@
 <html>
 <head>
 	<title>WebGuesser</title>
+	<style type="text/css">
+		body {
+			background: <%=color%>;
+		}
+	</style>
 </head>
 <body>
 	<p>
