I6: adding a limit to the amount of guesses until new game

--- a/views/index.erb
+++ b/views/index.erb
@@ -12,6 +12,9 @@
 	<p>
 		<%=message%>
 	</p>
+	<p>
+		You have <%= guesses_left %> guesses left
+	</p>
 	<% if cheat == "true" %>
 	<p>
 		The SECRET NUMBER is <%=secret_number%>
